--- a/src/Views/ly5.fxml
+++ b/src/Views/ly5.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,7 +14,7 @@
    <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label text="SCORE" textFill="RED">
+            <Label prefHeight="106.0" prefWidth="120.0" text="SCORE" textFill="RED">
                <padding>
                   <Insets bottom="20.0" />
                </padding>
@@ -29,10 +29,7 @@
                   </ImageView>
                </graphic>
             </Label>
-            <TextArea fx:id="textArea">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" />
-               </VBox.margin></TextArea>
+            <ListView fx:id="textArea" prefHeight="200.0" prefWidth="200.0" />
             <Button fx:id="mainMenu" mnemonicParsing="false" onAction="#mainMenu" text="Main Menu">
                <VBox.margin>
                   <Insets top="20.0" />
